--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,10 @@
 PORT=3001
+
+# Obten las claves en firebase...
+APIKEY=
+AUTHDOMAIN=
+PROJECTID=
+STORAGEBUCKET=
+MESSAGINGSENDERID=
+APPID=
+MEASUREMENTID=
